--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
-body{background-color: powderblue;}
+h1{ text-align: center;
+  padding: 0; margin: 0;
+}
+a{color:black; font-size: 30px;}
+ul{margin: 0;
+  padding: 10px; padding-right: 0; padding-left: 40px;}
+  body{margin: 0;}
+#pic{background-image:url(studying01사이즈수정.jpg);
+  width: 90%; height: 100%;
+  margin-left: 172px;
+  margin:0;}
+#grid{display: grid;
+ grid-template-columns: 200px 1fr;}
