--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1{ text-align: center;
   padding: 0; margin: 0;
 }
-a{color:black; font-size: 30px;}
+a{color:black; font-size: 30px; text-decoration: none;}
 ul{margin: 0;
   padding: 10px; padding-right: 0; padding-left: 40px;}
   body{margin: 0;}
@@ -10,4 +10,4 @@ ul{margin: 0;
   margin-left: 172px;
   margin:0;}
 #grid{display: grid;
- grid-template-columns: 200px 1fr;}
+ grid-template-columns: 300px 1fr;}
