--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ ul{margin: 0;
   padding: 10px; padding-right: 0; padding-left: 40px;}
   body{margin: 0;}
 #pic{background-image:url(studying01사이즈수정.jpg);
-  width: auto; height: 100%;
+  width: auto; height: auto;
   margin-left: 172px;
   margin:0;}
 #grid{display: grid;
